Add IEA 22MW reference wind turbine to turbine library (#1146)
* Data and docs for 22MW reference turbine

* List example

* Formatting

* Fixed above-rated power output

* Rename example for clarity

* Updated values using higher-fidelity simulations (missing very low speeds)

* Updates; wind speeds down to cut in specified

* Update documentation

* Remove forced capitalization

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -361,3 +361,11 @@ journal = {Journal of Fluid Mechanics},
 	author = {Gaertner, Evan and Sethuraman, Latha and Anderson, Benjamin and Barter, Garrett and Abbas, Nikhar and Bortolotti, Pietro and Scott, George and Feil, Roland and Shields, Matthew and Rinker, Jennifer and Zahle, Frederik and Meng, Fanzhong and Skrzypinski, Witold and Bredmose, Henrik and Dykes, Katherine and Allen, Christopher and Viselli, Anthony},
 	year = {2020},
 }
+
+@techreport{zahle_IEA22MW_2024,
+	title = {Definition of the {IEA} {Wind} 22-{Megawatt} Offshore Reference Wind Turbine},
+	url = {https://orbit.dtu.dk/en/publications/definition-of-the-iea-wind-22-megawatt-offshore-reference-wind-tu},
+	institution = {International Energy Agency},
+	author = {Zahle, Frederik and Barlas, Athanasios and Loenbaek, Kenneth and Bortolotti, Pietro and Zalkind, Daniel and Wang, Lu and Labuschagne, Casper and Sethuraman, Latha and Barter, Garrett},
+	year = {2024},
+}
