Update name of laboratory (#1160)
* NREL -> NLR

* Typo fix

* Strictly less than v3.15 to allow patch to float

* revert and check

* Strictly less than 3.15

* Remove script-specific discalimer

* Alliance for Energy Innovation

--- a/docs/code_quality.ipynb
+++ b/docs/code_quality.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "The plot below shows the runtime performance over a series of commits for a\n",
     "3-turbine test case with 1,440 atmospheric conditions.\n",
-    "This data is collected on [NREL's Kestrel supercomputer](https://nrel.github.io/HPC/Documentation/Systems/Kestrel/)."
+    "This data is collected on [NLR's Kestrel supercomputer](https://nrel.github.io/HPC/Documentation/Systems/Kestrel/)."
    ]
   },
   {
@@ -301,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.2"
   },
   "orig_nbformat": 4
  },
