--- a/docs/multidimensional_wind_turbine.ipynb
+++ b/docs/multidimensional_wind_turbine.ipynb
@@ -95,7 +95,13 @@
    "source": [
     "Note that this example is not meant to be represntative of a real turbine, but rather to illustrate\n",
     "the functionality. At this time, FLORIS only support a single external condition combination at a\n",
-    "time, but multiple combinations can be run sequentially as is shown above."
+    "time, but multiple combinations can be run sequentially as is shown above.\n",
+    "\n",
+    "As of FLORIS v4.6, users can further specify array-based multidimensional conditions, where a\n",
+    "different multidimensional condition can be specified for each findex. This allows users to run\n",
+    "multiple multidimensional condition combinations in a single call to `fmodel.run()`. Further,\n",
+    "multidimensional conditions can now be passed to `floris.set()` via the `WindData` objects\n",
+    "(`TimeSeries`, in this case)."
    ]
   },
   {
@@ -103,11 +109,51 @@
    "id": "8c21f432",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b18ef8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multidim_conditions = {\n",
+    "    \"Tp\": np.array([2]*n_wind_speeds + [4]*n_wind_speeds),\n",
+    "    \"Hs\": np.array([1]*n_wind_speeds + [5]*n_wind_speeds),\n",
+    "}\n",
+    "\n",
+    "fmodel.set(\n",
+    "    wind_data=TimeSeries(\n",
+    "        wind_directions=np.zeros(n_wind_speeds*2),\n",
+    "        wind_speeds=np.tile(wind_speeds, 2),\n",
+    "        turbulence_intensities=0.06,\n",
+    "        multidim_conditions=multidim_conditions,\n",
+    "    ),\n",
+    ")\n",
+    "# Call fmodel.run() once and run both conditions in one go\n",
+    "fmodel.run()\n",
+    "\n",
+    "powers = fmodel.get_turbine_powers()\n",
+    "thrust_coefficients = fmodel.get_turbine_thrust_coefficients()\n",
+    "\n",
+    "fig, ax = plt.subplots(2, 1, sharex=True)\n",
+    "ax[0].plot(wind_speeds, powers[:n_wind_speeds], label=\"First condition\")\n",
+    "ax[0].grid()\n",
+    "ax[0].set_ylabel(\"Power [kW]\")\n",
+    "ax[1].plot(wind_speeds, thrust_coefficients[:n_wind_speeds])\n",
+    "ax[1].grid()\n",
+    "ax[1].set_ylabel(\"Thrust coefficient [-]\")\n",
+    "ax[1].set_xlabel(\"Wind speed [m/s]\")\n",
+    "ax[1].set_xlim([0, 30])\n",
+    "ax[0].plot(wind_speeds, powers[n_wind_speeds:], label=\"Second condition\")\n",
+    "ax[0].legend(loc=\"upper left\")\n",
+    "ax[1].plot(wind_speeds, thrust_coefficients[n_wind_speeds:])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "floris",
+   "display_name": "eni",
    "language": "python",
    "name": "python3"
   },
@@ -121,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
