Improve various docstrings (#1171)
* Update references to floris.simulation and add docstring to get_defaults

* Improve docstrings for user-level functionality

* Update args docstring

* Formatting

* Update docstring

* Fix WETO software hyperlink

* Fix documentation for cut planes and add documentation for visualizations

* Add Katic reference

* Switch from r to r_squared to be explicit and avoid confusion

* Another reference to Katic

* Add notes regarding CH initial exponent

* Spelling fix

* Square image, update email addresses

* Update todo note

--- a/docs/wake_models.ipynb
+++ b/docs/wake_models.ipynb
@@ -213,7 +213,9 @@
     "\n",
     "CrespoHernandez is a wake-turbulence model that is used to compute additional variability introduced\n",
     "to the flow field by operation of a wind turbine. Implementation of the model follows the original\n",
-    "formulation and limitations outlined in {cite:t}`crespo1996turbulence`."
+    "formulation and limitations outlined in {cite:t}`crespo1996turbulence`.\n",
+    "\n",
+    "The default parameter values used in FLORIS for CrespoHernandez differ from those reported in {cite:t}`crespo1996turbulence` following subsequent calibration. However, {cite:t}`zehtabiyan_rezaie_CH_2023` argue that the sign of certain parameters are not physically consistent (and also misreported in subsequent literature). See the `CrespoHernandez` class docstring for more details."
    ]
   },
   {
@@ -347,8 +349,7 @@
    "source": [
     "### Sum of Squares Freestream Superposition (SOSFS)\n",
     "\n",
-    "This model combines the wakes via a sum of squares of the new wake to add and the existing\n",
-    "flow field."
+    "This model combines the wakes via a sum of squares of the new wake to add and the existing flow field. For more information, refer to :cite:`katic_sos_1986`."
    ]
   },
   {
