--- a/docs/references.bib
+++ b/docs/references.bib
@@ -146,7 +146,7 @@ DOI = {10.5194/wes-3-819-2018}
 
 @article{crespo1996turbulence,
   title={Turbulence characteristics in wind-turbine wakes},
-  author={Crespo, A and Hernandez, J},
+  author={Crespo, A. and Hernández, J.},
   journal={Journal of wind engineering and industrial aerodynamics},
   volume={61},
   number={1},
@@ -368,4 +368,37 @@ journal = {Journal of Fluid Mechanics},
 	institution = {International Energy Agency},
 	author = {Zahle, Frederik and Barlas, Athanasios and Loenbaek, Kenneth and Bortolotti, Pietro and Zalkind, Daniel and Wang, Lu and Labuschagne, Casper and Sethuraman, Latha and Barter, Garrett},
 	year = {2024},
+}
+
+@article{fleming_sr_2022,
+	title = {Serial-Refine Method for Fast Wake-Steering Yaw Optimization},
+	volume = {2265},
+	issn = {1742-6588, 1742-6596},
+	url = {https://iopscience.iop.org/article/10.1088/1742-6596/2265/3/032109},
+	doi = {10.1088/1742-6596/2265/3/032109},
+	number = {3},
+	journal = {Journal of Physics: Conference Series (TORQUE)},
+	author = {Fleming, Paul A. and Stanley, Andrew P. J. and Bay, Christopher J. and King, Jennifer and Simley, Eric and Doekemeijer, Bart M. and Mudafort, Rafael},
+	year = {2022},
+	pages = {032109},
+}
+
+@inproceedings{katic_sos_1986,
+	address = {Rome, Italy},
+	title = {A simple model for cluster efficiency},
+	volume = {1},
+	author = {Katic, I and Højstrup, J and Jensen, N O},
+	year = {1986},
+	pages = {407--410},
+}
+
+@article{zehtabiyan_rezaie_CH_2023,
+	title = {A short note on turbulence characteristics in wind-turbine wakes},
+	volume = {240},
+	issn = {0167-6105},
+	doi = {10.1016/j.jweia.2023.105504},
+	journal = {Journal of Wind Engineering and Industrial Aerodynamics},
+	author = {Zehtabiyan-Rezaie, Navid and Abkar, Mahdi},
+	year = {2023},
+	pages = {105504},
 }
